force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__TotalAmountOfCashinInPrintFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfCashinInPrintFCY__c</fullName>
    <formula>IF(  clofor_com_cfs__TotalAmountOfCashInUSD__c  = NULL , clofor_com_cfs__TotalAmountOfCashInFCYFormu__c , clofor_com_cfs__TotalAmountOfCashInUSD__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-In in Print(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>