force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__TotalAmountOfCashinInPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfCashinInPrintLocal__c</fullName>
    <formula>IF( clofor_com_cfs__TotalAmountCashIn__c  = NULL , clofor_com_cfs__TotalAmountOfCashInLocalFormu__c , clofor_com_cfs__TotalAmountCashIn__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cash-In in Print(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>