force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__TotalAmountOfCashInUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfCashInUSD__c</fullName>
    <label>TOTAL AMOUNT OF CASH-IN(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>