force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__TrxPlanProcessingType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanProcessingType__c</fullName>
    <label>Trx Plan Processing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TrxPlanProcessing</valueSetName>
    </valueSet>
</CustomField>