force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/recordTypes/clofor_com_cfs__CashIn.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashIn</fullName>
    <active>true</active>
    <description>To manage cash inbound transaction for local currency</description>
    <label>CASH IN</label>
</RecordType>