force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/recordTypes/clofor_com_cfs__CashOut.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashOut</fullName>
    <active>true</active>
    <description>To manage cash outbound transaction for local currency</description>
    <label>CASH OUT</label>
</RecordType>