force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/recordTypes/clofor_com_cfs__CashRequest.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashRequest</fullName>
    <active>false</active>
    <description>Request to cash transaction</description>
    <label>CASH REQUEST</label>
</RecordType>