force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/recordTypes/clofor_com_cfs__InboundTransactionUSD.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InboundTransactionUSD</fullName>
    <active>true</active>
    <description>To manage cash inbound transaction for USD currency</description>
    <label>Inbound Transaction-USD Currency</label>
</RecordType>