force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/recordTypes/clofor_com_cfs__OutboundTransactionUSD_Currency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OutboundTransactionUSD_Currency</fullName>
    <active>true</active>
    <description>To manage cash outbound transaction for USD currency</description>
    <label>Outbound Transaction-USD Currency</label>
</RecordType>