force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/recordTypes/clofor_com_cfs__Transaction.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Transaction</fullName>
    <active>false</active>
    <description>Transaction from one Bank account to Cash</description>
    <label>TRANSACTION</label>
</RecordType>