force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/validationRules/clofor_com_cfs__BALANCE_COLLECTED_LATER_HANDOVER_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__BALANCE_COLLECTED_LATER_HANDOVER_DATE</fullName>
    <active>false</active>
    <errorConditionFormula>clofor_com_cfs__DATE_TIME_BALANCE_COLLECTED__c  &lt;  clofor_com_cfs__DATE_TIME_HANDOVER_TO_STAFF__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__DATE_TIME_BALANCE_COLLECTED__c</errorDisplayField>
    <errorMessage>Balance Collected Date must be later than Handover Date to Staff</errorMessage>
</ValidationRule>