force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/listViews/clofor_com_cfs__Cash_out_USD.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Cash_out_USD</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__CashDescription__c</columns>
    <columns>clofor_com_cfs__CASH_STATUS__c</columns>
    <columns>clofor_com_cfs__AMOUNT_ADVANCE_PAID_TO_STAFF__c</columns>
    <columns>clofor_com_cfs__ACTUAL_PAID_TO_VENDOR__c</columns>
    <columns>clofor_com_cfs__EXPECTED_RETURN_AMOUNT__c</columns>
    <columns>clofor_com_cfs__RETURNED_AMOUNT__c</columns>
    <columns>clofor_com_cfs__DATE_TIME_HANDOVER_TO_STAFF__c</columns>
    <columns>clofor_com_cfs__DATE_TIME_BALANCE_COLLECTED__c</columns>
    <columns>clofor_com_cfs__DIFFERENCE_LEFT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__CASH_BOOK__c.clofor_com_cfs__OutboundTransactionUSD_Currency</value>
    </filters>
    <label>Cash out USD</label>
    <language>en_US</language>
</ListView>