force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/listViews/clofor_com_cfs__CashBalance.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__CashBalance</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__BankFrom__c</columns>
    <columns>clofor_com_cfs__BankTo__c</columns>
    <columns>clofor_com_cfs__OpeningBalanceLocal__c</columns>
    <columns>clofor_com_cfs__ACTUAL_PAID_TO_VENDOR__c</columns>
    <columns>clofor_com_cfs__ActualAmountCollected__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceLocal__c</columns>
    <columns>clofor_com_cfs__DATE_TIME_HANDOVER_TO_STAFF__c</columns>
    <columns>clofor_com_cfs__AccountedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cash Balance</label>
    <language>en_US</language>
</ListView>